--- a/html/index.html
+++ b/html/index.html
@@ -121,7 +121,7 @@
                     <div class="btn-group btn-group-justified">
                         <a href="#" class="btn btn-success"><i class="fa fa-file"></i> </a>
                         <a href="#" class="btn btn-success"> <i class="fa fa-download"></i></a>
-                        <a href="#" class="btn btn-success">Кнопка</a>
+                        <a href="#" class="btn btn-success">wsedjhqvsdКнопка</a>
 
                     </div>
                     <br>
