--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">
-                <span class="sr-only">Открыть навигацию</span>
+                <span class="sr-only">Открыть навигаци1ю</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -118,10 +118,11 @@
         <div class="container">
             <div class="row">
                 <div class="btn-toolbar">
+                    <br>
                     <div class="btn-group btn-group-justified">
                         <a href="#" class="btn btn-success"><i class="fa fa-file"></i> </a>
                         <a href="#" class="btn btn-success"> <i class="fa fa-download"></i></a>
-                        <a href="#" class="btn btn-success">wsedjhqvsdКнопка</a>
+                        <a href="#" class="btn btn-success">Кнопка</a>
 
                     </div>
                     <br>
@@ -146,10 +147,10 @@
                     <div class="col-md-6">
                         <div class="btn-group dropup">
                             <button class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown">
-                                ВЫпадающее меню <span class="caret"></span>
+                                <i class="fa fa-list"></i> ВЫпадающее меню <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">ССылка</a></li>
+                                <li><a href="#">ССыqwлка</a></li>
                                 <li><a href="#">ССылка</a></li>
                                 <li><a href="#">ССылка</a></li>
                                 <li><a href="#">ССылка</a></li>
@@ -159,25 +160,41 @@
                     </div>
                     <div class="col-md-6"></div>
                     <div class="tabs">
-                        <ul class="nav nav-tabs">
+                       <br> <br> <br> <ul class="nav nav-tabs">
                             <li class="active"><a href="#tab-1" data-toggle="tab">Вкладка1</a></li>
-                            <li><a href="#tab-2" data-toggle="tab" >Вкладка2</a></li>
+                            <li><a href="#tab-2" data-toggle="tab" >Вкладка2 <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>  </a></li>
                             <li><a href="#tab-3" data-toggle="tab">Вкладка3</a></li>
                         </ul>
                         <div class="tab-content">
+
                             <div class="tab-pane active  in " id="tab-1">
-                                <p>Параграф с ткстом1</p>
+                                <p>Параграф с ткстом1
+                                   <br> <strong>sdfiuj</strong>
+                                    <i class="fa fa-linode fa-5x fa-rotate-90 fa-spinner fa-spin"  aria-hidden="true"></i>
+                                   <br> shdfkiygsdfkugdsfukygsdkjfsdf
+                                sdfsdfsdfskdjhfi34fsdfsdf
+                                sdfskjdhfskygfsudfsdf
+                                sdfkmhsdfhuygsdfuysgdf</p>
                             </div>
                             <div class="tab-pane fade" id="tab-2">
-                                <p>Параграф с ткстом2</p>
+                                <p>Параграф с ткстом2
+                                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Pellentesque in ipsum id orci porta dapibus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                                </p>
                             </div>
                             <div class="tab-pane fade" id="tab-3">
-                                <p>Параграф с ткстом3</p>
+                                <p>Параграф с ткстом3
+                                sdfushdfiuygsdkiyfsdf
+                                sdfiusdfsiuydgfsdf
+                                sdfkjhsduyfgsdf</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 col-sm-offset-0 col-md-6 col-xs-6">
+
+                </div>
+
         </div>
     </div>
     <br>
