--- a/html/index.html
+++ b/html/index.html
@@ -95,6 +95,7 @@
 
 </div>
 <div class="container">
+
     <div class="row">
         <h1>Название страницы</h1>
         <p>
@@ -140,12 +141,13 @@
             </div>
         </div>
     </div>
+
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-sm-offset-0 col-md-6 col-xs-6">
+            <div class="col-sm-4 col-sm-offset-0 col-xs-offset-0 col-md-offset-0 col-md-4 col-xs-4">
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="btn-group dropup">
+
+                        <div class="btn-group dropdown">
                             <button class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-list"></i> ВЫпадающее меню <span class="caret"></span>
                             </button>
@@ -158,51 +160,47 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-6"></div>
-                    <div class="tabs">
-                       <br> <br> <br> <ul class="nav nav-tabs">
-                            <li class="active"><a href="#tab-1" data-toggle="tab">Вкладка1</a></li>
-                            <li><a href="#tab-2" data-toggle="tab" >Вкладка2 <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>  </a></li>
-                            <li><a href="#tab-3" data-toggle="tab">Вкладка3</a></li>
-                        </ul>
-                        <div class="tab-content">
+                </div>
+            <div class="col-sm-8 col-sm-offset-0 col-md-8 col-xs-8">
+                <div class="tabs">
+                    <ul class="nav nav-tabs">
+                    <li class="active"><a href="#tab-1" data-toggle="tab">Вкладка1</a></li>
+                    <li><a href="#tab-2" data-toggle="tab" >Вкладка2 <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>  </a></li>
+                    <li><a href="#tab-3" data-toggle="tab">Вкладка3</a></li>
+                </ul>
+                    <div class="tab-content">
 
-                            <div class="tab-pane active  in " id="tab-1">
-                                <p>Параграф с ткстом1
-                                   <br> <strong>sdfiuj</strong>
-                                    <i class="fa fa-linode fa-5x fa-rotate-90 fa-spinner fa-spin"  aria-hidden="true"></i>
-                                   <br> shdfkiygsdfkugdsfukygsdkjfsdf
+                        <div class="tab-pane active  in " id="tab-1">
+                            <p>Параграф с ткстом1
+                                <br> <strong>sdfiuj</strong>
+                                <i class="fa fa-linode fa-5x fa-rotate-90 fa-spinner fa-spin"  aria-hidden="true"></i>
+                                <br> shdfkiygsdfkugdsfukygsdkjfsdf
                                 sdfsdfsdfskdjhfi34fsdfsdf
                                 sdfskjdhfskygfsudfsdf
                                 sdfkmhsdfhuygsdfuysgdf</p>
-                            </div>
-                            <div class="tab-pane fade" id="tab-2">
-                                <p>Параграф с ткстом2
-                                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Pellentesque in ipsum id orci porta dapibus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
-                                </p>
-                            </div>
-                            <div class="tab-pane fade" id="tab-3">
-                                <p>Параграф с ткстом3
+                        </div>
+                        <div class="tab-pane fade" id="tab-2">
+                            <p>Параграф с ткстом2
+                                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Sed porttitor lectus nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Pellentesque in ipsum id orci porta dapibus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                            </p>
+                        </div>
+                        <div class="tab-pane fade" id="tab-3">
+                            <p>Параграф с ткстом3
                                 sdfushdfiuygsdkiyfsdf
                                 sdfiusdfsiuydgfsdf
                                 sdfkjhsduyfgsdf</p>
-                            </div>
+                            <a href="#" class="btn btn-success"> <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
+                 </div>
             </div>
-            <div class="col-sm-6 col-sm-offset-0 col-md-6 col-xs-6">
 
-                </div>
 
         </div>
     </div>
     <br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
+
     <br><br>
     <br><br>
     <br>
@@ -210,5 +208,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.js"></script>
+<footer>
+<div class="footer">
+    asdasdasdasdasdasd
+
+</div>
+
+
+</footer>
 </body>
+
 </html>
