--- a/html/index.html
+++ b/html/index.html
@@ -209,10 +209,16 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.js"></script>
 <footer>
-<div class="footer">
-    asdasdasdasdasdasd
+    <div class="navbar-footer navbar-inverse">
+        <ul class="nav navbar-nav">
+            <li><a href="#">Пункт 1</a></li>
+            <li><a href="#">Пункт 2</a></li>
+            <li><a href="#">Пункт 3</a></li>
+            <li><a href="#">Пункт 4</a></li>
+        </ul>
 
-</div>
+
+    </div>
 
 
 </footer>
