--- a/html/index.html
+++ b/html/index.html
@@ -21,22 +21,23 @@
     <![endif]-->
 </head>
 <body>
+
 <div class="navbar navbar-inverse navbar-static-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">
-                <span class="sr-only">Открыть навигаци1ю</span>
+                <span class="sr-only">Открыть навигацию</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Логотип</a>
+            <a class="navbar-brand fa fa-anchor fa-2x fa-chevron-circle-down"  href="#">AnchorTeam</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav">
-                <li><a href="#">Пункт1</a></li>
+                <li><a href="#">Якоря</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Пункт2 <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Все наши якоря <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Пункт 1</a></li>
                         <li><a href="#">Пункт 2</a></li>
@@ -44,8 +45,8 @@
                         <li><a href="#">Пункт 4</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Пункт3</a></li>
-                <li><a href="#">Пункт4</a></li>
+                <li><a href="#">Зачем это здесь?</a></li>
+                <li><a href="#">Я не знаю</a></li>
             </ul>
         </div>
     </div>
@@ -97,6 +98,7 @@
 <div class="container">
 
     <div class="row">
+    <div class="col-md-10 col-sm-10 ">
         <h1>Название страницы</h1>
         <p>
             <a href="#" class="btn btn-default">Кнопка</a>
@@ -107,41 +109,32 @@
             <a href="#" class="btn btn-danger">asdasd</a>
             <a href="#" class="btn btn-link">weqwe</a>
         </p>
-        <p>
-            <a href="#" class="btn btn-primary btn-lg">Кнопка</a>
-            <a href="#" class="btn btn-primary">Кнопка</a>
-            <a href="#" class="btn btn-primary btn-sm">Кнопка</a>
-            <a href="#" class="btn btn-primary btn-xs">Кнопка</a>
-        </p>
-        <p>
-            <a href="#" class="btn btn-primary btn-lg btn-block active"></a>
-        </p>
-        <div class="container">
+    </div>
+        <br>
+        <br>
+        <br>
+
+    <div class="col-md-2 col-sm-2 col-xs-2 col-md-offset-0 col-xs-offset-0 col-sm-offset-0">
+        <div class="container " style="width: 125px">
             <div class="row">
                 <div class="btn-toolbar">
                     <br>
-                    <div class="btn-group btn-group-justified">
-                        <a href="#" class="btn btn-success"><i class="fa fa-file"></i> </a>
-                        <a href="#" class="btn btn-success"> <i class="fa fa-download"></i></a>
-                        <a href="#" class="btn btn-success">Кнопка</a>
+                    <div class="btn-group btn-active btn-link btn-group">
+                        <a href="#" class="btn "><i class="fa fa-file"></i> </a>
+                        <a href="#" class="btn "> <i class="fa fa-download"></i></a>
+                        <a href="#" class="btn ">Info</a>
 
                     </div>
                     <br>
-                    <div class="btn-group-vertical">
-                        <div class="btn-group btn-group-justified">
-                            <a href="#" class="btn btn-success"><i class="fa fa-file"></i> </a>
-                            <a href="#" class="btn btn-success"> <i class="fa fa-download"></i></a>
-                            <a href="#" class="btn btn-success">Кнопка</a>
-
-                        </div>
-
 
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    </div>
+<br>
+      <br>
     <div class="container">
         <div class="row">
             <div class="col-sm-4 col-sm-offset-0 col-xs-offset-0 col-md-offset-0 col-md-4 col-xs-4">
@@ -174,7 +167,7 @@
                         <div class="tab-pane active  in " id="tab-1">
                             <p>Параграф с ткстом1
                                 <br> <strong>sdfiuj</strong>
-                                <i class="fa fa-linode fa-5x fa-rotate-90 fa-spinner fa-spin" aria-hidden="true"></i>
+                                <i class="fa fa-linode fa-2x fa-rotate-90 fa-spinner fa-spin" aria-hidden="true"></i>
                                 <br> shdfkiygsdfkugdsfukygsdkjfsdf
                                 sdfsdfsdfskdjhfi34fsdfsdf
                                 sdfskjdhfskygfsudfsdf
@@ -286,12 +279,12 @@
 <script src="js/calc2.js"></script>
 
 <footer>
-    <div class="navbar-footer navbar-inverse">
+    <div class="navbar-footer navbar-inverse navbar">
         <ul class="nav navbar-nav">
-            <li><a href="#">Пункт 1</a></li>
-            <li><a href="#">Пункт 2</a></li>
-            <li><a href="#">Пункт 3</a></li>
-            <li><a href="#">Пункт 4</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Сотрудничество</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">О Нас</a></li>
         </ul>
 
 
